src/objects/NPT_Json_Status__e.object
<CustomObject>
    <fields>
        <fullName>Failure_Message__c</fullName>
        <label>Failure Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Json_ID__c</fullName>
        <label>Json ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>NPT Json Status</label>
    <pluralLabel>NPT Json Statuses</pluralLabel>
</CustomObject>